# posh

./: README.md  main.py  pyproject.toml  setup.cfg
src/zshpy/: __init__.py  _abstract_file.py  _abstract_zsh_line.py  _alias.py  _environment_variable.py  _file_path.py  _run_commands.py
